--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ dependencies {
 // https://mvnrepository.com/artifact/org.projectlombok/lombok
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.20' //lombok 연결
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.20' //annotation lombok 연결
+    // https://mvnrepository.com/artifact/mysql/mysql-connector-java
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.24' //MySql 연결
 }
 
 test {
